--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,18 +17,18 @@ body {
 }
 
 .header h1 {
-  margin: 0 0 10px 0;
+  margin: 0 0 15px 0;
   font-size: 2em;
   font-weight: bold;
   color: #333;
 }
 
-.header h3 {
+.header p[data-testid="subtitle"] {
   margin: 10px 0 0 0;
-  font-size: 1.1em;
+  font-size: 1em;
   color: #666;
   font-weight: normal;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 h4 {
